sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:9: error: not found: value m
    for(i <- 0 to getValueCount()-2-m){
                                    ^AlgCocktailSort1:16: error: not found: value o
    for(j <- 0 to getValueCount()-2-o){
                                    ^